@@ -2,6 +2,7 @@ $Id$
 
 1.4.5 TBD
 
+* use embedded images for show/hide toggle buttons (thanks to matt perry)
 * ensure graph controls float above other elements
 * zoom when zoom rectangle drags to right or left
 * added hourly interval
